# label

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  MyImage.h  README.md  imagetools.cpp  imagetools.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_functions.cpp  mainwindow_ui.cpp  resources.qrc
.cache/clangd/index/: mainwindow.h.0CD05ADC68379559.idx
.history/: CMakeLists_20250305152459.txt  CMakeLists_20250307101916.txt  CMakeLists_20250307112127.txt  CMakeLists_20250307113739.txt  CMakeLists_20250307113944.txt  CMakeLists_20250307143345.txt  CMakeLists_20250311093925.txt  CMakeLists_20250311094406.txt  CMakeLists_20250311094421.txt  CMakeLists_20250311094756.txt  CMakeLists_20250311104149.txt  CMakeLists_20250311104153.txt  CMakeLists_20250311104156.txt  CMakeLists_20250311104200.txt  CMakeLists_20250311104202.txt  main_20250304155847.cpp  main_20250307143257.cpp  main_20250311095119.cpp  mainwindow_20250305155231.h  mainwindow_20250306110659.cpp  mainwindow_20250307143159.cpp  mainwindow_20250307143428.cpp  mainwindow_20250307143457.cpp  mainwindow_20250307143603.h  mainwindow_20250310152119.cpp  mainwindow_20250311095155.h  mainwindow_20250311095204.h  mainwindow_20250326110545.h  mainwindow_20250326110601.h
dialogs/: BinaryOptionsDialog.cpp  BinaryOptionsDialog.h  BrightnessContrastDialog.cpp  BrightnessContrastDialog.h  ConvolveDialog.cpp  ConvolveDialog.h  FilterDialog.cpp  FilterDialog.h  GaussianBlurDialog.cpp  GaussianBlurDialog.h  ScaleDialog.h  ThresholdDialog.cpp  ThresholdDialog.h  TopHatDialog.cpp  TopHatDialog.h  UnsharpMaskDialog.cpp  UnsharpMaskDialog.h  scaledialog.cpp
processors/: BinaryProcessor.cpp  BinaryProcessor.h  FilterProcessor.cpp  FilterProcessor.h  ModelProcessor.cpp  MyImage.cpp  MyImage.h  MyModel.cpp  MyModel.h  Shape.cpp  Shape.h  Workspace.cpp  Workspace.h  YoloModel.h
